uptime-kuma/uptime-kuma-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: uptime-kuma
